--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>Hello World</h1>
     <p>
         <strong>«Hello, world!»</strong>
+         — программа, результатом работы которой является вывод на экран или иное устройство фразы «Hello, world!».
     </p>
 </body>
 </html>
