--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Hello World</h1>
     <p>
-        <strong>«Hello, world!»</strong>
+        <strong>«Hello, world!»1</strong>
          — программа, результатом работы которой является вывод на экран или иное устройство фразы «Hello, world!».
     </p>
 </body>
