Добавил новый абзац

--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
         <strong>«Hello, world!»1</strong>
          — программа, результатом работы которой является вывод на экран или иное устройство фразы «Hello, world!».
     </p>
+    <p>
+        Добавил новый абзац
+    </p>
 </body>
 </html>
