--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
     <title>Сайт</title>
 </head>
 <body>
-    <h1>Hello World. Добавлен текст в заголовок</h1>
+    <h1>Hello World</h1>
     <p>
-        <strong>«Hello, world!»1</strong>
+        <strong>«Hello, world!»</strong>
          — программа, результатом работы которой является вывод на экран или иное устройство фразы «Hello, world!».
-        Добавлена новая строка
     </p>
 </body>
 </html>
